Revision history for Dist-Zilla-Plugin-Author-CSSON-GithubActions

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [New Features]

 [Other Changes]

 [Requirements]

 [Stats & Dependency Changes]

 [Testing]

0.0106 2020-12-26T15:26:00Z UTC
 [Bug Fixes]
 - Fix bugs in distribution_name, so that it looks in the correct share
   directory.

 [Stats & Dependency Changes]
 - 4 files changed, 13 insertions(+), 4 deletions(-)

0.0105 2020-12-26T13:07:13Z UTC
 [Bug Fixes]
 - Fix faulty package name

 [Stats & Dependency Changes]
 - 3 files changed, 7 insertions(+), 4 deletions(-)

0.0104 2020-12-26T12:56:52Z UTC
 [Other Changes]
 - Rewritten so that GithubActions is now a role, and each workflow class
   will be their own plugin. This makes it much easier to add custom
   parameters adapted for each workflow.

 [Stats & Dependency Changes]
 - 11 files changed, 374 insertions(+), 374 deletions(-)
 - (run req) - Module::Load

0.0103 2020-12-25T22:36:10Z UTC
 [Bug Fixes]
 - It was wrongfully listed as a prereq for itself, that has been fixed

 [Stats & Dependency Changes]
 - 4 files changed, 3 insertions(+), 4 deletions(-)
 - (run req) - Dist::Zilla::Plugin::Author::CSSON::GithubActions

0.0102 2020-12-25T20:57:32Z UTC
 [Bug Fixes]
 - Don't include the generated workflow file in distributions that uses
   this plugin

 [Stats & Dependency Changes]
 - 4 files changed, 24 insertions(+), 15 deletions(-)

0.0101 2020-12-25T19:49:39Z UTC
 [Bug Fixes]
 - Minor fixes

 [Stats & Dependency Changes]
 - 4 files changed, 9 insertions(+), 7 deletions(-)

0.0100 2020-12-25T18:19:22Z UTC
 - Initial release

 [Stats & Dependency Changes]
 - (run req) + Dist::Zilla::File::InMemory (any)
 - (run req) + Dist::Zilla::Plugin::Author::CSSON::GithubActions (any)
 - (run req) + Dist::Zilla::Role::FileGatherer (any)
 - (run req) + Dist::Zilla::Role::Plugin (any)
 - (run req) + File::ShareDir 1.102
 - (run req) + List::AllUtils (any)
 - (run req) + Module::Load 0.26