@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2020-12-26 11:08:49 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2020-12-30 19:56:16 UTC.
 ; The following configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0327
+; * Dist::Iller::Config::Author::CSSON: 0.0328
 
 name = Dist-Zilla-Plugin-Author-CSSON-GithubActions
 author = Erik Carlsson <info@code301.com>
@@ -16,7 +16,7 @@ exclude_filename = Makefile.PL
 
 [PromptIfStale]
 check_all_plugins = 1
-phase = build
+phase = release
 
 [CopyFilesFromBuild]
 copy = META.json
@@ -91,9 +91,6 @@ directory = examples
 
 [Git::Contributors]
 
-[Test::Kwalitee::Extra]
-arg = !prereq_matches_use !build_prereq_matches_use
-
 [Test::NoTabs]
 
 [Test::EOL]
@@ -159,8 +156,7 @@ remotes_must_exist = 1
 [Prereqs / DevelopRequires]
 Badge::Depot = 0.0103
 Badge::Depot::Plugin::Coverage = 0
-Badge::Depot::Plugin::Cpantesters = 0
-Badge::Depot::Plugin::Kwalitee = 0
+Badge::Depot::Plugin::Githubactions = 0
 Badge::Depot::Plugin::Perl = 0
 Dist::Zilla = 6.015
 Dist::Zilla::Plugin::Authority = 1.009
@@ -204,7 +200,6 @@ Dist::Zilla::Plugin::ShareDir = 0
 Dist::Zilla::Plugin::Test::Compile = 2.058
 Dist::Zilla::Plugin::Test::EOF = 0.0501
 Dist::Zilla::Plugin::Test::EOL = 0.18
-Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 Dist::Zilla::Plugin::Test::NoTabs = 0.15
 Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
 Dist::Zilla::Plugin::Test::Version = 1.09
@@ -229,7 +224,7 @@ Test::Warnings = 0.026
 
 [Prereqs / DevelopSuggests]
 Dist::Iller = 0.1409
-Dist::Iller::Config::Author::CSSON = 0.0327
+Dist::Iller::Config::Author::CSSON = 0.0328
 
 [Prereqs / RuntimeRequires]
 Dist::Zilla::File::InMemory = 0
@@ -243,10 +238,11 @@ Path::Class::File = 0
 Path::Tiny = 0.072
 Test::Exception = 0
 Try::Tiny = 0.24
+Types::Path::Tiny = 0.005
 Types::Standard = 1.000006
 YAML::XS = 0
 namespace::autoclean = 0.22
-perl = 5.010000
+perl = 5.014000
 
 [Prereqs / TestRequires]
 Path::Tiny = 0.072
@@ -257,8 +253,7 @@ YAML::XS = 0
 
 ; authordep Badge::Depot = 0.0103
 ; authordep Badge::Depot::Plugin::Coverage = 0
-; authordep Badge::Depot::Plugin::Cpantesters = 0
-; authordep Badge::Depot::Plugin::Kwalitee = 0
+; authordep Badge::Depot::Plugin::Githubactions = 0
 ; authordep Badge::Depot::Plugin::Perl = 0
 ; authordep Dist::Zilla = 6.015
 ; authordep Dist::Zilla::Plugin::Authority = 1.009
@@ -302,7 +297,6 @@ YAML::XS = 0
 ; authordep Dist::Zilla::Plugin::Test::Compile = 2.058
 ; authordep Dist::Zilla::Plugin::Test::EOF = 0.0501
 ; authordep Dist::Zilla::Plugin::Test::EOL = 0.18
-; authordep Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 ; authordep Dist::Zilla::Plugin::Test::NoTabs = 0.15
 ; authordep Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
 ; authordep Dist::Zilla::Plugin::Test::Version = 1.09
