@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2020-12-24 17:59:55 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2020-12-28 19:43:08 UTC.
 ; The following configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0326
+; * Dist::Iller::Config::Author::CSSON: 0.0328
 
 [@CorePrep]
 
@@ -9,11 +9,10 @@
 [Name]
 
 [Badges]
--kwalitee_author = CSSON
+-githubactions_workflow = makefile-test
 badge = perl
-badge = kwalitee
-badge = cpantesters
 badge = coverage
+badge = githubactions
 formats = html, markdown
 
 [Version]
